<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.vamshedhar.coursemanager.AddCourseFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:text="@string/title"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/courseTitleET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView4"
                android:layout_alignBottom="@+id/textView4"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/textView4"
                android:inputType="textPersonName"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView4"
                android:layout_below="@+id/courseTitleET"
                android:layout_marginTop="15dp"
                android:text="@string/choose_instructor"
                android:textSize="18sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/instructorList"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_below="@+id/textView5"
                android:layout_margin="15dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/instructorList"
                android:layout_below="@+id/instructorList"
                android:text="@string/schedule"
                android:layout_marginTop="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/textView7"
                android:layout_below="@+id/textView7"
                android:layout_marginTop="20dp"
                android:text="@string/day"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/daySpinner"
                android:layout_width="180dp"
                android:layout_height="30dp"
                android:layout_alignBaseline="@+id/textView8"
                android:layout_alignBottom="@+id/textView8"
                android:layout_alignEnd="@+id/timeDay"
                android:entries="@array/weekdays"
                android:prompt="@string/select_day" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/time"
                android:textSize="18sp"
                android:layout_below="@+id/daySpinner"
                android:layout_toEndOf="@+id/textView4" />

            <EditText
                android:id="@+id/timeHours"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView9"
                android:layout_alignBottom="@+id/textView9"
                android:layout_marginStart="18dp"
                android:layout_toEndOf="@+id/textView9"
                android:ems="10"
                android:maxLength="2"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView9"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/timeHours"
                android:text=":"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/timeMinutes"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/timeHours"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/textView11"
                android:ems="10"
                android:maxLength="2"
                android:inputType="number" />

            <Spinner
                android:id="@+id/timeDay"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:layout_alignBottom="@+id/timeMinutes"
                android:layout_alignTop="@+id/timeMinutes"
                android:layout_marginStart="18dp"
                android:layout_toEndOf="@+id/timeMinutes"
                android:entries="@array/time" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/credit_hours"
                android:textSize="18sp"
                android:layout_below="@+id/timeHours"
                android:layout_alignStart="@+id/textView7" />

            <RadioGroup
                android:id="@+id/creditsGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView6"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:layout_toEndOf="@+id/textView6"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/credits1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="1" />

                <RadioButton
                    android:id="@+id/credits2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="2" />

                <RadioButton
                    android:id="@+id/credits3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="3" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView6"
                android:layout_below="@+id/textView6"
                android:layout_marginTop="20dp"
                android:text="@string/semester"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/semesterSpinner"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignTop="@+id/textView10"
                android:layout_toEndOf="@+id/textView9"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="15dp"
                android:entries="@array/semesters"
                android:prompt="@string/select_semester"/>

            <Button
                android:id="@+id/resetBtn"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:layout_below="@id/textView10"
                android:layout_alignStart="@+id/textView10"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="25dp"/>

            <Button
                android:id="@+id/createBtn"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:layout_alignParentBottom="true"
                android:layout_alignEnd="@+id/semesterSpinner"
                android:layout_marginRight="25dp"/>

            <TextView
                android:id="@+id/noInstructorsMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView5"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="50dp"
                android:text="@string/no_instructor_msg"
                android:textAlignment="center"
                android:textSize="18dp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/createInstructorBtn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/noInstructorsMessage"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/create_instructor"
                android:textAllCaps="false"
                android:visibility="invisible" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
