<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.vamshedhar.coursemanager.RegisterFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/registerProfilePic"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/profile_image" />

            <EditText
                android:id="@+id/registerFirstNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/registerProfilePic"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/registerLastNameET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/registerFirstNameET"
                android:layout_alignStart="@+id/registerFirstNameET"
                android:layout_below="@+id/registerFirstNameET"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/registerUsernameET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/registerLastNameET"
                android:layout_alignStart="@+id/registerLastNameET"
                android:layout_below="@+id/registerLastNameET"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/registerPasswordET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/registerUsernameET"
                android:layout_alignStart="@+id/registerUsernameET"
                android:layout_below="@+id/registerUsernameET"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/password_signup"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/registerPasswordET"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:elevation="10dp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textSize="18sp" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
