<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.vamshedhar.coursemanager.InstructorDetailsFragment"
    android:paddingTop="30dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/instructorProfilePic"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:src="@drawable/profile_image" />

    <TextView
        android:id="@+id/instructorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:layout_toEndOf="@+id/instructorProfilePic"
        android:textSize="24sp"
        android:textStyle="italic"
        tools:text="Srinivas Akella" />

    <TextView
        android:id="@+id/instructorEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/instructorName"
        android:layout_below="@+id/instructorName"
        android:layout_marginRight="15dp"
        android:layout_marginTop="12dp"
        android:text="sakella@uncc.edu"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/instructorWebsite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/instructorEmail"
        android:layout_below="@+id/instructorEmail"
        android:layout_marginRight="15dp"
        android:layout_marginTop="14dp"
        android:text="http://www.srinivasakella.com"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/instructorProfilePic"
        android:layout_below="@+id/instructorProfilePic"
        android:layout_marginTop="24dp"
        android:text="@string/instructor_courses"
        android:textSize="18sp"
        android:textStyle="italic" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/courseList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView12"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp" />

    <TextView
        android:id="@+id/noCoursesMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView12"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/no_courses"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="italic"
        android:visibility="visible" />

    <TextView
        android:id="@+id/addCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/noCoursesMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/add_course"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

</RelativeLayout>
